--- a/templates/base.html
+++ b/templates/base.html
@@ -1239,6 +1239,27 @@
 			</span>
 			<!--end::Svg Icon-->
 		</div>
+
+        							<!--begin::Footer-->
+							<div class="footer py-4 d-flex flex-column flex-md-row flex-stack" id="kt_footer">
+								<!--begin::Copyright-->
+								<div class="text-dark order-2 order-md-1">
+									<span class="text-muted fw-semibold me-1">2022&copy;</span>
+									<a href="/" target="_blank" class="text-gray-800 text-hover-primary">hub crm beta 1.2</a>
+								</div>
+								<!--end::Copyright-->
+								<!--begin::Menu-->
+								<ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
+									<li class="menu-item">
+										<a href="#" target="_blank" class="menu-link px-2">About</a>
+									</li>
+								</ul>
+								<!--end::Menu-->
+							</div>
+							<!--end::Footer-->
+
+
+
 		<!--end::Scrolltop-->
 		<!--begin::Javascript-->
 		<script>var hostUrl = "assets/";</script>
