--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
     <div class="shadow-sm p-3 mb-5 bg-body rounded">
-    Сумма: {{ info.allmoney }}
+    Оплаченная сумма: {{ info.paymoney }} | Cумма общая: {{ info.allmoney }}
     </div>
     <div class="row">
         <div class="col-4">
