--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -20,10 +20,14 @@
             <div class="tab-content" id="nav-tabContent">
                 {% for item in page_obj %}
                     <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
+
                         <div class="shadow p-3 mb-5 bg-body rounded">
                             Cумма: {{ item.money }}<br>
                             Предоплата: {{ item.prepayment }}<br>
                             Дата создания: {{ item.created_at }}<br>
+                                                    <button type="button" class="btn btn-sm btn-light">
+                            <a href="edit/{{ item.pk }}">Редактировать</a>
+                        </button>
                         </div>
                     </div>
                 {% endfor %}
