--- a/money/templates/include/_forms_textinput.html
+++ b/money/templates/include/_forms_textinput.html
@@ -5,7 +5,7 @@
        {% endif %}
        {% include "django/forms/widgets/attrs.html" %}>
     <label class="form-check-label" for="">
-        <b>Оплачено!</b>
+        <h1><b>Оплачено!</b></h1>
     </label>
 </div>
 
