--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -31,7 +31,7 @@
 									<!--begin::Wrapper-->
 									<div class="me-3">
 										<!--begin::Menu-->
-										<a href="#" class="btn btn-light fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+										<a href="/" class="btn btn-light fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen031.svg-->
 										<span class="svg-icon svg-icon-5 svg-icon-gray-500 me-1">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
 									</div>
 									<!--end::Wrapper-->
 									<!--begin::Button-->
-                                        <a href="#" class="btn btn-dark fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Cоздать</a>
+                                        <a href="/" class="btn btn-dark fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Cоздать</a>
                                     <div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_create123">
 											<!--begin::Header-->
 											<div class="px-7 py-5">
