--- a/plugins/templates/plugins/sidebar_plugins_tags.html
+++ b/plugins/templates/plugins/sidebar_plugins_tags.html
@@ -94,6 +94,17 @@
 													</a>
 													<!--end:Menu link-->
 												</div>
+												<!--begin:Menu item-->
+												<div class="menu-item">
+													<!--begin:Menu link-->
+													<a class="menu-link" href="{% url 'uuidcopy' %}">
+														<span class="menu-bullet">
+															<span class="bullet bullet-dot"></span>
+														</span>
+														<span class="menu-title">UUID copy v1-v2</span>
+													</a>
+													<!--end:Menu link-->
+												</div>
 												<!--end:Menu item-->
 											</div>
 											<!--end:Menu sub-->
