--- a/templates/base.html
+++ b/templates/base.html
@@ -201,7 +201,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">BoomApp by Keenthemes</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">BoomApp by Keenthemes</a>
 															<span class="fs-7 text-muted fw-semibold">#45789</span>
 														</div>
 														<!--end::Title-->
@@ -225,7 +225,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"Kept API Project Meeting</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"Kept API Project Meeting</a>
 															<span class="fs-7 text-muted fw-semibold">#84050</span>
 														</div>
 														<!--end::Title-->
@@ -249,7 +249,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"KPI Monitoring App Launch</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"KPI Monitoring App Launch</a>
 															<span class="fs-7 text-muted fw-semibold">#84250</span>
 														</div>
 														<!--end::Title-->
@@ -273,7 +273,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">Project Reference FAQ</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">Project Reference FAQ</a>
 															<span class="fs-7 text-muted fw-semibold">#67945</span>
 														</div>
 														<!--end::Title-->
@@ -297,7 +297,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"FitPro App Development</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"FitPro App Development</a>
 															<span class="fs-7 text-muted fw-semibold">#84250</span>
 														</div>
 														<!--end::Title-->
@@ -321,7 +321,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">Shopix Mobile App</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">Shopix Mobile App</a>
 															<span class="fs-7 text-muted fw-semibold">#45690</span>
 														</div>
 														<!--end::Title-->
@@ -345,7 +345,7 @@
 														<!--end::Symbol-->
 														<!--begin::Title-->
 														<div class="d-flex flex-column">
-															<a href="#" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"Landing UI Design" Launch</a>
+															<a href="/" class="fs-6 text-gray-800 text-hover-primary fw-semibold">"Landing UI Design" Launch</a>
 															<span class="fs-7 text-muted fw-semibold">#24005</span>
 														</div>
 														<!--end::Title-->
@@ -536,7 +536,7 @@
 								<!--begin::Theme mode-->
 								<div class="d-flex align-items-center ms-1">
 									<!--begin::Menu toggle-->
-									<a href="#" class="btn btn-icon btn-color-white bg-hover-white bg-hover-opacity-10 w-30px h-30px h-40px w-40px" data-kt-menu-trigger="{default:'click', lg: 'hover'}" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
+									<a href="/" class="btn btn-icon btn-color-white bg-hover-white bg-hover-opacity-10 w-30px h-30px h-40px w-40px" data-kt-menu-trigger="{default:'click', lg: 'hover'}" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen060.svg-->
 										<span class="svg-icon theme-light-show svg-icon-2">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -568,7 +568,7 @@
 									<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-title-gray-700 menu-icon-muted menu-active-bg menu-state-color fw-semibold py-4 fs-base w-175px" data-kt-menu="true" data-kt-element="theme-mode-menu">
 										<!--begin::Menu item-->
 										<div class="menu-item px-3 my-0">
-											<a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="light">
+											<a href="/" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="light">
 												<span class="menu-icon" data-kt-element="icon">
 													<!--begin::Svg Icon | path: icons/duotune/general/gen060.svg-->
 													<span class="svg-icon svg-icon-3">
@@ -592,7 +592,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3 my-0">
-											<a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="dark">
+											<a href="/" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="dark">
 												<span class="menu-icon" data-kt-element="icon">
 													<!--begin::Svg Icon | path: icons/duotune/general/gen061.svg-->
 													<span class="svg-icon svg-icon-3">
@@ -611,7 +611,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3 my-0">
-											<a href="#" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="system">
+											<a href="/" class="menu-link px-3 py-2" data-kt-element="mode" data-kt-value="system">
 												<span class="menu-icon" data-kt-element="icon">
 													<!--begin::Svg Icon | path: icons/duotune/general/gen062.svg-->
 													<span class="svg-icon svg-icon-3">
@@ -662,7 +662,7 @@
 												<div class="d-flex flex-column">
 													<div class="fw-bold d-flex align-items-center fs-5">{{ user.username }}
 													<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span></div>
-													<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">mail@mail.com</a>
+													<a href="/" class="fw-semibold text-muted text-hover-primary fs-7">mail@mail.com</a>
 												</div>
 												<!--end::Username-->
 											</div>
@@ -688,7 +688,7 @@
 										<!--end::Menu item-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-5" data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="left-start">
-											<a href="#" class="menu-link px-5">
+											<a href="/" class="menu-link px-5">
 												<span class="menu-title">My Subscription</span>
 												<span class="menu-arrow"></span>
 											</a>
@@ -737,7 +737,7 @@
 										<!--end::Menu separator-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-5" data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="left-start">
-											<a href="#" class="menu-link px-5">
+											<a href="/" class="menu-link px-5">
 												<span class="menu-title position-relative">Language
 												<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English
 												<img class="w-15px h-15px rounded-1 ms-2" src="" alt="" /></span></span>
@@ -807,7 +807,7 @@
 												<div class="d-flex flex-column">
 													<div class="fw-bold d-flex align-items-center fs-5">NO LOGIN
 													<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span></div>
-													<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">mail@mail.com</a>
+													<a href="/" class="fw-semibold text-muted text-hover-primary fs-7">mail@mail.com</a>
 												</div>
 												<!--end::Username-->
 											</div>
@@ -1251,7 +1251,7 @@
 								<!--begin::Menu-->
 								<ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
 									<li class="menu-item">
-										<a href="#" target="_blank" class="menu-link px-2">About</a>
+										<a href="/" target="_blank" class="menu-link px-2">About</a>
 									</li>
 								</ul>
 								<!--end::Menu-->
