--- a/templates/base2.html
+++ b/templates/base2.html
@@ -27,7 +27,7 @@
 
 
                       <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Настройки
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
