--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -17,7 +17,7 @@
 										<!--end::Menu separator-->
 										<!--begin::Menu item-->
 										<div class="menu-item px-3" data-kt-menu-trigger="hover" data-kt-menu-placement="right-start">
-											<a href="#" class="menu-link px-3">Настройки</a>
+											<a href="/" class="menu-link px-3">Настройки</a>
                                             <!--begin::Menu sub-->
                                             <div class="menu-sub menu-sub-dropdown w-175px py-2">
                                                 <!--begin::Menu item-->
