--- a/users/templates/users/users_index.html
+++ b/users/templates/users/users_index.html
@@ -32,7 +32,7 @@
 									<!--begin::Wrapper-->
 									<div class="me-3">
 										<!--begin::Menu-->
-										<a href="#" class="btn btn-light fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+										<a href="" class="btn btn-light fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen031.svg-->
 										<span class="svg-icon svg-icon-5 svg-icon-gray-500 me-1">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
 									</div>
 									<!--end::Wrapper-->
 									<!--begin::Button-->
-									<a href="#" class="btn btn-dark fw-bold" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app" id="kt_toolbar_primary_button">Create</a>
+									<a href="" class="btn btn-dark fw-bold" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app" id="kt_toolbar_primary_button">Create</a>
 									<!--end::Button-->
 								</div>
 								<!--end::Actions-->
@@ -263,7 +263,7 @@
 								<!--begin::Menu-->
 								<ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
 									<li class="menu-item">
-										<a href="#" target="_blank" class="menu-link px-2">About</a>
+										<a href="" target="_blank" class="menu-link px-2">About</a>
 									</li>
 								</ul>
 								<!--end::Menu-->
