--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block content %}
 
+    {{ main_list.0 }}
+
                             <!--begin::Toolbar-->
 							<div class="toolbar mb-5 mb-lg-7" id="kt_toolbar">
 								<!--begin::Page title-->
